@@ -36,6 +36,7 @@ import bzrlib.ui as ui
 
 def test_suite():
     testmod_names = [
+                     'bzrlib.tests.blackbox.test_add',
                      'bzrlib.tests.blackbox.test_added',
                      'bzrlib.tests.blackbox.test_aliases',
                      'bzrlib.tests.blackbox.test_ancestry',
