@@ -16,8 +16,7 @@
 # Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 
 
-"""Black-box tests for 'bzr added', which shows newly-added files.
-"""
+"""Black-box tests for 'bzr added', which shows newly-added files."""
 
 import os
 
